<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BIPER</string>
    <string name="service_name">BIPER Service</string>
    <string name="exercise">Measure</string>
    <string name="biper_user">user data</string>
    <string name="configuration">config</string>
    <string name="button_gps">GPS</string>
    <string name="button_2">button2</string>
    <string name="button_3">button3</string>
    
    <!-- Settings -->
    <string name="action_settings">설정</string>
    <string name="settings_background_service">백그라운드로 실행</string>
    <string name="settings_iot_guide">\n앱에서 아래와 같은 형식의 메시지를 받으면 자동으로 지정된 서버로 HTTP request를 보내줍니다.</string>
    <string name="settings_copyrights">\n\n상세 정보 http://www.hardcopyworld.com</string>
    E Chat
    <!-- UI, Activity, Fragment -->
    <string name="title_example">BIPER</string>
    <string name="title_ll_settings">설정</string>
    <string name="ui_send">전송</string>
    
    <!--  Bluetooth -->
    <string name="bt_title">블루투스</string>
    <string name="bt_state_init">초기화 중...</string>
    <string name="bt_state_wait">대기중.. (우측 상단 아이콘으로 수동 검색)</string>
    <string name="bt_state_connect">연결중...</string>
    <string name="bt_state_connected">연결됨</string>
    <string name="bt_state_error">error</string>
    <string name="bt_not_enabled_leaving">블루투스가 꺼져 있습니다. 폰의 Settings 에서 블루투스를 활성화 하세요.</string>
    <string name="bt_cmd_sending_error">전송 실패</string>
    <string name="bt_ble_not_supported">이 기기는 BLE를 지원하지 않습니다. 앱을 종료합니다.</string>

    <!--  DeviceListActivity -->
    <string name="scanning">장치 검색중...</string>
    <string name="select_device">연결할 장치 선택</string>
    <string name="none_paired">페어링 된 장치가 없습니다.</string>
    <string name="none_found">검색된 장치가 없습니다.</string>
    <string name="title_paired_devices">페어링 된 장치들</string>
    <string name="title_other_devices">사용가능한 다른 장치들</string>
    <string name="button_scan">장치 스캔</string>

    <!-- Options Menu -->
    <string name="connect">BLE 연결</string>
    <string name="discoverable">Make\ndiscoverable</string>
    

</resources>
