<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_scan"
        android:orderInCategory="10"
        android:title="@string/connect"
        app:showAsAction="withText" />

    <item
        android:id="@+id/action_exr"
        android:orderInCategory="10"
        android:title="@string/exercise"
        app:showAsAction="withText" />

    <item
        android:id="@+id/action_user"
        android:orderInCategory="10"
        android:title="@string/biper_user"
        app:showAsAction="withText" />


    <item
        android:id="@+id/action_cofig"
        android:orderInCategory="10"
        android:title="@string/configuration"
        app:showAsAction="withText" />

    //   item
       // android:id="@+id/action_discoverable"
      //  android:orderInCategory="40"
      //  android:icon="@android:drawable/ic_menu_myplaces"
      //  android:title="@string/discoverable"
    //

</menu>
