<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity$DummySectionFragment" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        >


        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/button_send"
            android:text="@string/button_gps"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:background="@color/colorPrimary"
            android:layout_marginTop="8dp"
            style="?android:attr/borderlessButtonStyle"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/button2"
            android:text="@string/button_2"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:background="@color/colorPrimary"
            android:layout_marginTop="8dp"
            style="?android:attr/borderlessButtonStyle"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/button3"
            android:text="@string/button_3"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:background="@color/colorPrimary"
            android:layout_marginTop="8dp"

            style="?android:attr/borderlessButtonStyle"
            />

    </LinearLayout>


</ScrollView>